--- a/pt/forum-sul-americano-2020.html
+++ b/pt/forum-sul-americano-2020.html
@@ -38,7 +38,7 @@
   <meta property="og:description" content="Reúso. Redistribuição. Remanufatura. Reciclagem. Prolongamento do ciclo de vida. Como manter o valor dos produtos e abrir novas possibilidades de obtenção de valor dentro de uma cadeia sustentável de produção?" />
   <meta property="og:url" content="http://economiacircular.fiesp.com.br" />
   <meta property="og:site_name" content="Economia Circular" />
-  <meta property="og:image" content="http://economiacircular.fiesp.com.br/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
+  <meta property="og:image" content="http://economiacircular.fiesp.com.br/pt/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
 
 
 
@@ -114,9 +114,9 @@
               <i class="fa fa-globe" aria-hidden="true"></i> 
             </a>
             <div class="dropdown-menu" style="right: 0px !important; left: initial !important;" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-right" href="#">Português <img src="images/pt.gif" alt="Lingua Portuguesa"></a>
-              <a class="dropdown-item text-right" href="#">English <img src="images/en.gif" alt="English language"></a>
-              <a class="dropdown-item text-right" href="#">Español <img src="images/es.gif" alt="Lengua Española"></a>
+              <a class="dropdown-item text-right" href="../pt/forum-sul-americano-2020.html">Português <img src="images/pt.gif" alt="Lingua Portuguesa"></a>
+              <a class="dropdown-item text-right" href="../en/forum-sul-americano-2020.html">English <img src="images/en.gif" alt="English language"></a>
+              <a class="dropdown-item text-right" href="../es/forum-sul-americano-2020.html">Español <img src="images/es.gif" alt="Lengua Española"></a>
             </div>
           </li>
         </ul>
@@ -236,12 +236,14 @@
                 <h4>DEBATE: Construindo uma Economia Circular na América Latina</h4>
 
                 <ul>
-                  <li><strong>Daniel Lage Chang</strong> - MCTI - Coordenador de Programas e Projetos em Bioeconomia</li>
+                  <li><strong>Marcelo Marcos Morales </strong> - Secretário de Políticas para Formação de Ações Estratégicas do MCTI</li>
                   <li><strong>Guilhermo Gonzalez</strong> - Ministério do Meio Ambiente do Chile</li>
+                  <li><strong>Alex Saer </strong> - Diretor de Desenvolvimento Sustentável do Ministério do Meio Ambiente da Colômbia</li>
                   <li><strong>Júlio Sosa</strong> - Coordenador Executivo da Câmara das Indústrias do Uruguai </li>
+                  <li><strong>Elizabeth Peralta </strong> - Ex-Chefe do Departamento de Engenharia e Gestão Ambiental da Empresa Pública Municipal de serviços de água, esgoto e pluvial da cidade de Mar del Plata – Argentina</li>
                   <li><strong>Claudinei Reche</strong> - Presidente da SKF para América Latina</li>
-                  <li><strong>Oscar Mendez</strong> - Co-fundador Conceptos Plásticos da Colômbia</li>
-                  <li><strong>Juan Pablo</strong> - Associação Interamericana de Engenharia Sanitária e Ambiental Argentina</li>
+                  
+                  
                 </ul>
 
                  <p>Moderação: <br>
