--- a/pt/index.html
+++ b/pt/index.html
@@ -179,9 +179,9 @@
               <i class="fa fa-globe" aria-hidden="true"></i> 
             </a>
             <div class="dropdown-menu" style="right: 0px !important; left: initial !important;" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item text-right" href="#">Português <img src="images/pt.gif" alt="Lingua Portuguesa"></a>
-              <a class="dropdown-item text-right" href="#">English <img src="images/en.gif" alt="English language"></a>
-              <a class="dropdown-item text-right" href="#">Español <img src="images/es.gif" alt="Lengua Española"></a>
+              <a class="dropdown-item text-right" href="../pt/index.html">Português <img src="images/pt.gif" alt="Lingua Portuguesa"></a>
+              <a class="dropdown-item text-right" href="../en/index.html">English <img src="images/en.gif" alt="English language"></a>
+              <a class="dropdown-item text-right" href="../es/index.html">Español <img src="images/es.gif" alt="Lengua Española"></a>
             </div>
           </li>
         </ul>
