--- a/pt/forum-sul-americano-2020.html
+++ b/pt/forum-sul-americano-2020.html
@@ -100,15 +100,13 @@
             <a class="nav-link js-scroll-trigger" href="index.html">PORTAL ECONOMIA CIRCULAR</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE O FÓRUM</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE O WCEFOnline</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#programacao">PROGRAMAÇÃO</a>
           </li>
           
-          <li class="nav-item  px-2">
-            <a class="nav-link js-scroll-trigger" href="#local">LOCAL DO EVENTO</a>
-          </li>
+         
           <li class="nav-item dropdown ml-3">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-globe" aria-hidden="true"></i> 
@@ -152,26 +150,29 @@
 
         <div class="col-sm-12 col-xl-10 offset-xl-1">
           <div class="section-header">
-            <h2>FÓRUM SUL-AMERICANO DE 
-              <br><strong>economia circular</strong>
+            <h2>WCEFonline Side Event: Construindo uma  
+              <br><strong>Economia Circular na América Latina</strong>
             </h2>
           </div>
-          <div class="col-lg-10 offset-lg-1">
+          <div class="col-lg-10 offset-lg-1 d-none">
           <h3 class="h4 text-center">Reúso. Redistribuição. Remanufatura. Reciclagem. Prolongamento do ciclo de vida. </h3>
           <p class="lead text-center">Como manter o valor dos produtos e abrir novas possibilidades de obtenção de valor dentro de uma cadeia sustentável de produção?</p>
           </div>
           <div class="colunas">
 
             <p>
-              A Economia Circular é o caminho para o uso mais eficiente dos recursos naturais e aumento da competitividade da indústria. Pensando nisso, FIESP, CIESP e SENAI-SP organizam esse fórum reunindo representantes do setor público e privado de diversos países para apresentar boas práticas em políticas públicas e modelos de negócios.
+              Fomentar a implementação da economia circular globalmente requer atenção às diversidades regionais, permitindo uma transição inclusiva para esse novo modelo econômico. 
+            </p>
+
+            <p>
+              Pensando nisso, FIESP, CIESP e SENAI-SP organizam um debate sobre as oportunidades e os desafios para se constituir uma economia circular na América Latina e a importância de parcerias, com representantes dos setores público e privado.
             </p>
 
             <p>
               Venha debater conosco os principais caminhos para a circularidade em nosso continente!
             </p>
-
             <p>
-              O encontro será realizado em parceria com a SITRA o Fundo Finlandês de Inovação que organiza o World Circular Economy Forum em parceria com a Finlândia, e reunirá conhecimentos e experiências de fóruns mundiais já realizados, além de preparar a audiência para o encontro global no fim do ano no Canadá.
+              O encontro fará parte do segundo dia de atividades do World Circular Economy Forum Online (WCEFonline), evento organizado pelo Fundo Finlandês de Inovação, SITRA, que reúne os principais pensadores e executores da economia circular de todo o mundo.
             </p>
           </div>
           <div class="pt-5 text-center">
@@ -195,7 +196,7 @@
             <h2>  
               <strong>PROGRAMAÇÃO</strong>
             </h2>
-            <p>DATA: 30 DE SETEMBRO - ONLINE</p>
+            <p>DATA: 30 DE SETEMBRO<br>das 8:30 às 12:00  <br>(horário de Brasília)</p>
           </div>
 
           <div class="col-md-10 offset-md-1">
@@ -216,7 +217,7 @@
               <div class="col-md-2"><time>9:00</time></div>
               <div class="col-md-10">
                 <h4>PALESTRA – WCEF 2020</h4>
-                <p>Parceria através da mudança: novo impulso na economia circular emergente</p>
+                <p><strong>Parceria através da mudança: novo impulso na economia circular emergente</strong></p>
                 <p>PACE (Plataforma para Acelerar a Economia Circular)</p>
               </div>
             </div> <!-- FIM LINHA -->
@@ -289,7 +290,7 @@
 
 
       <!-- PATROCINADORES -->
-  <section id="patrocinadores" class="section-with-bg">
+  <!-- <section id="patrocinadores" class="section-with-bg d-none">
     <div class="container">
       <div class="row">
         <div class="col-12 text-right">
@@ -300,12 +301,12 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
   <!-- LOCAL -->
-  <section id="local" class=" ">
+  <section id="local" class="d-none">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
