--- a/pt/forum-sul-americano-2020.html
+++ b/pt/forum-sul-americano-2020.html
@@ -100,7 +100,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">PORTAL ECONOMIA CIRCULAR</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE O WCEFOnline</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#programacao">PROGRAMAÇÃO</a>
@@ -150,8 +150,8 @@
 
         <div class="col-sm-12 col-xl-10 offset-xl-1">
           <div class="section-header">
-            <h2>WCEFonline Side Event: Construindo uma  
-              <br><strong>Economia Circular na América Latina</strong>
+            <h2>CONSTRUINDO UMA ECONOMIA CIRCULAR<br>NA AMÉRICA LATINA  
+              <br><strong>WCEFONLINE SIDE EVENT</strong>
             </h2>
           </div>
           <div class="col-lg-10 offset-lg-1 d-none">
@@ -238,7 +238,7 @@
 
                 <ul>
                   <li><strong>Marcelo Marcos Morales </strong> - Secretário de Políticas para Formação de Ações Estratégicas do MCTI</li>
-                  <li><strong>Guilhermo Gonzalez</strong> - Ministério do Meio Ambiente do Chile</li>
+                  <li><strong>Luis Martinez Cerna</strong> - Universidad Central de Chile</li>
                   <li><strong>Alex Saer </strong> - Diretor de Desenvolvimento Sustentável do Ministério do Meio Ambiente da Colômbia</li>
                   <li><strong>Júlio Sosa</strong> - Coordenador Executivo da Câmara das Indústrias do Uruguai </li>
                   <li><strong>Elizabeth Peralta </strong> - Ex-Chefe do Departamento de Engenharia e Gestão Ambiental da Empresa Pública Municipal de serviços de água, esgoto e pluvial da cidade de Mar del Plata – Argentina</li>
