--- a/en/forum-sul-americano-2020.html
+++ b/en/forum-sul-americano-2020.html
@@ -100,7 +100,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">SITE CIRCULAR ECONOMY</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre-forum">ABOUT WCEFOnline</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre-forum">ABOUT</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#programacao">PROGRAMME</a>
@@ -148,8 +148,8 @@
 
         <div class="col-sm-12 col-xl-10 offset-xl-1">
           <div class="section-header">
-            <h2>WCEFonline Side Event: Building a  
-              <br><strong>Circular Economy in Latin America</strong>
+            <h2>BUILDING A CIRCULAR ECONOMY IN LATIN AMERICA  
+              <br><strong>WCEFONLINE SIDE EVENT</strong>
             </h2>
           </div>
 
@@ -242,7 +242,7 @@
 
                 <ul>
                   <li><strong>Marcelo Marcos Morales </strong> - Secretary of Policy for the Formation of Strategic Actions at Ministry of Science, Technology and Innovation of Brazil</li>
-                  <li><strong>Guilhermo Gonzalez</strong> - Chile Ministry of Environment</li>
+                  <li><strong>Luis Martinez Cerna</strong> - Universidad Central de Chile</li>
                   <li><strong>Alex Saer </strong> - Director of Sustainable Development of the Ministry of Environment of Colombia</li>
                   <li><strong>Júlio Sosa</strong> - Executive Coordinator of the Chamber of Industries of Uruguay</li>
                   <li><strong>Elizabeth Peralta </strong> - Ex-Head of the Engineering and Environmental Management Departament of Municipal Public Company of water and sewage and rainwater services of Mar del Plata – Argentina</li>
