--- a/en/index.html
+++ b/en/index.html
@@ -172,7 +172,7 @@
           </li>
           
           <li class="nav-item  px-2">
-            <a class="nav-link js-scroll-trigger" href="forum-sul-americano-2020.html">WCEFOnline</a>
+            <a class="nav-link js-scroll-trigger" href="forum-sul-americano-2020.html">EVENTS</a>
           </li>
           <li class="nav-item dropdown ml-3">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
