--- a/es/forum-sul-americano-2020.html
+++ b/es/forum-sul-americano-2020.html
@@ -100,7 +100,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">SITIO ECONOMIA CIRCULAR</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE WCEFOnline</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#programacao">PROGRAMA</a>
@@ -150,8 +150,8 @@
 
         <div class="col-sm-12 col-xl-10 offset-xl-1">
           <div class="section-header">
-            <h2>Side event WCEFonline: Construyendo una  
-              <br><strong>economía circular en América Latina</strong>
+            <h2>CONSTRUYENDO UNA ECONOMÍA CIRCULAR <br>EN AMÉRICA LATINA  
+              <br><strong>SIDE EVENT WCEFONLINE</strong>
             </h2>
           </div>
 
@@ -243,7 +243,7 @@
 
                 <ul>
                   <li><strong>Marcelo Marcos Morales </strong> - Secretario de Políticas de Formación y Acciones Estratégicas del Ministerio de Ciencia, Tecnología e Innovaciones de Brasil </li>
-                  <li><strong>Guilhermo Gonzalez</strong> - Ministerio de Ambiente de Chile</li>
+                  <li><strong>Luis Martinez Cerna</strong> - Universidad Central de Chile</li>
                   <li><strong>Alex Saer </strong> - Director de Desarrollo Sostenible del Ministerio de Ambiente de Colombia</li>
                   <li><strong>Júlio Sosa</strong> - Coordinador Ejecutivo de la Cámara de Industrias de Uruguay</li>
                   <li><strong>Elizabeth Peralta </strong> - Ex-Jefe del Departamento de Ingeniería y Gestión Ambiental de la Empresa Pública Municipal de servicios de agua, cloaca y Pluvial de la ciudad de Mar del Plata - Argentina</li>
