--- a/es/index.html
+++ b/es/index.html
@@ -38,7 +38,7 @@
   <meta property="og:description" content="Não é de hoje que nós da Fiesp, do Ciesp, do Sesi e do Senai de São Paulo, reconhecemos que, sem um compromisso de todos com o desenvolvimento sustentável, comprometeremos não apenas a competitividade da nossa indústria e o crescimento econômico, mas principalmente o futuro do planeta." />
   <meta property="og:url" content="http://economiacircular.fiesp.com.br" />
   <meta property="og:site_name" content="Economia Circular" />
-  <meta property="og:image" content="http://economiacircular.fiesp.com.br/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
+  <meta property="og:image" content="http://economiacircular.fiesp.com.br/es/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
 
 
 
@@ -165,7 +165,7 @@
             <a class="nav-link js-scroll-trigger" href="#presidente">PALABRA DEL PRESIDENTE</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre">SOBRE</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre">ACERCA</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#economia-circular">QUE ES LA ECONOMIA CIRCULAR</a>
