--- a/es/forum-sul-americano-2020.html
+++ b/es/forum-sul-americano-2020.html
@@ -100,7 +100,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html">SITIO ECONOMIA CIRCULAR</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link js-scroll-trigger" href="#sobre-forum">SOBRE</a>
+            <a class="nav-link js-scroll-trigger" href="#sobre-forum">ACERCA</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link js-scroll-trigger" href="#programacao">PROGRAMA</a>
