--- a/pt/index.html
+++ b/pt/index.html
@@ -38,7 +38,7 @@
   <meta property="og:description" content="Não é de hoje que nós da Fiesp, do Ciesp, do Sesi e do Senai de São Paulo, reconhecemos que, sem um compromisso de todos com o desenvolvimento sustentável, comprometeremos não apenas a competitividade da nossa indústria e o crescimento econômico, mas principalmente o futuro do planeta." />
   <meta property="og:url" content="http://economiacircular.fiesp.com.br" />
   <meta property="og:site_name" content="Economia Circular" />
-  <meta property="og:image" content="http://economiacircular.fiesp.com.br/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
+  <meta property="og:image" content="http://economiacircular.fiesp.com.br/pt/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
 
 
 
@@ -172,7 +172,7 @@
           </li>
           
           <li class="nav-item  px-2">
-            <a class="nav-link js-scroll-trigger" href="forum-sul-americano-2020.html">EVENTOS</a>
+            <a class="nav-link js-scroll-trigger" href="wcefonline.html">EVENTOS</a>
           </li>
           <li class="nav-item dropdown ml-3">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -202,7 +202,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-        <a href="forum-sul-americano-2020.html"><img src="images/banner-forum-sul-americano-2020.jpg" class="img-fluid d-none d-md-block" alt=""> <img src="images/banner-mobile-forum-sul-americano-2020.jpg" class="img-fluid d-inline d-md-none mt-5" alt=""></a>
+        <a href="wcefonline.html"><img src="images/banner-forum-sul-americano-2020.jpg" class="img-fluid d-none d-md-block" alt=""> <img src="images/banner-mobile-forum-sul-americano-2020.jpg" class="img-fluid d-inline d-md-none mt-5" alt=""></a>
         </div>
       </div>
     </div>
