--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
   <meta property="og:description" content="It is not just today that we at Fiesp, Ciesp, Sesi and Senai in São Paulo, recognize that, without everyone's commitment to sustainable development, we will compromise not only the competitiveness of our industry and economic growth, but mainly the future of the planet." />
   <meta property="og:url" content="http://economiacircular.fiesp.com.br" />
   <meta property="og:site_name" content="Circular Economy" />
-  <meta property="og:image" content="http://economiacircular.fiesp.com.br/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
+  <meta property="og:image" content="http://economiacircular.fiesp.com.br/en/images/card-fb-forum-Economia-Circular.png" /><!-- COLOCAR IMAGEM PARA O FACEBOOK SHARE -->
 
 
 
@@ -172,7 +172,7 @@
           </li>
           
           <li class="nav-item  px-2">
-            <a class="nav-link js-scroll-trigger" href="forum-sul-americano-2020.html">EVENTS</a>
+            <a class="nav-link js-scroll-trigger" href="wcefonline.html">EVENTS</a>
           </li>
           <li class="nav-item dropdown ml-3">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -202,7 +202,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center">
-        <a href="forum-sul-americano-2020.html"><img src="images/banner-forum-sul-americano-2020.jpg" class="img-fluid d-none d-md-block" alt=""> <img src="images/banner-mobile-forum-sul-americano-2020.jpg" class="img-fluid d-inline d-md-none mt-5" alt=""></a>
+        <a href="wcefonline.html"><img src="images/banner-forum-sul-americano-2020.jpg" class="img-fluid d-none d-md-block" alt=""> <img src="images/banner-mobile-forum-sul-americano-2020.jpg" class="img-fluid d-inline d-md-none mt-5" alt=""></a>
         </div>
       </div>
     </div>
